rtmp-ingest-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-ingest-service
spec:
  selector:
    app: rtmp-ingest-service
  ports:
    - protocol: TCP
      port: 1935
      targetPort: 1935
