rtmp-ingest-service/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: rtmp-ingest-route
spec:
  parentRefs:
    - name: my-gateway
      namespace: istio-system
  rules:
    - backendRefs:
        - name: rtmp-ingest-service
          port: 1935
